--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": ["@rocketseat/eslint-config/node"],
   "rules": {
     "prettier/prettier": ["error", { "endOfLine": "lf" }],
-    "camelcase": "off"
+    "camelcase": "off",
+    "no-useless-constructor": "off"
   }
 }
