--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.10.10",
+    "@vitest/coverage-v8": "3.0.4",
     "eslint": "8.57.1",
     "prisma": "6.3.0",
     "tsup": "8.3.6",
