--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@prisma/client": "6.3.0",
     "bcryptjs": "2.4.3",
+    "dayjs": "1.11.13",
     "dotenv": "16.4.7",
     "fastify": "5.2.1",
     "zod": "3.24.1"
